<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="dnd_sync_key"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="bedtime_sync_key"
            app:title="@string/sync_bedtime_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/permission_header">

        <Preference
            app:iconSpaceReserved="false"
            app:key="dnd_permission_key"
            app:summary="@string/dnd_permission_not_allowed"
            app:title="@string/dnd_permission_title" />

    </PreferenceCategory>

</PreferenceScreen>